--- a/responsiveWebDesign/responsive2/css/general.css
+++ b/responsiveWebDesign/responsive2/css/general.css
@@ -1,7 +1,10 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  list-style-type: none;
   text-decoration: none;
+  list-style-type: none;
+}
+body {
+  font-family: sans-serif;
+  font-size: 62.5%;
 }
