--- a/responsiveWebDesign/responsive2/css/queries.css
+++ b/responsiveWebDesign/responsive2/css/queries.css
@@ -1,34 +1,81 @@
-@media (max-width: 75em) {
+@media (max-width: 81.25em) {
   header {
-    position: relative;
+    font-size: 1.4em;
+  }
+
+  img {
+    width: 85vh;
+    height: 85vh;
+  }
+  .content {
+    font-size: 1.2em;
+  }
+  .btn-mobile-nav {
+    display: none;
+  }
+}
+@media (max-width: 56.25em) {
+  header {
+    font-size: 1.4em;
   }
   .nav-bar {
-    font-size: 1.25em;
-    display: unset;
+    display: block;
     text-align: center;
-    position: absolute;
-    transform: translateX(0%);
-    transition: all 1s ease-in;
   }
   .logo {
     margin-left: auto;
     margin-right: auto;
-    padding: 0;
-    font-weight: 600;
+    margin-bottom: 2em;
   }
-  .nav-list {
+  .nav-open .nav-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4em;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: blue;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    opacity: 1;
+    pointer-events: inherit;
+    visibility: visible;
+  }
+  .logo a {
+    padding-left: 0;
+  }
+  .slider {
     display: unset;
   }
-
-  .content {
-    font-size: 1.4em;
+  img {
+    width: 100%;
+    height: 100%;
   }
-  .mobile-nav-icons {
-    display: flex;
-    position: absolute;
-    top: 1em;
-    right: 5em;
-    /* 1)hide it visually */
-    opacity: 1;
+  .content {
+    font-size: 1.2em;
+  }
+  .btn-mobile-nav {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .icon-mobile-nav {
+    height: 2rem;
+    width: 3rem;
+    color: #333;
+  }
+  .menu-icon {
+    display: block;
+  }
+  .close-icon {
+    display: none;
+  }
+  .nav-open .menu-icon {
+    display: none;
+  }
+  .nav-open .close-icon {
+    display: block;
   }
 }
