--- a/responsiveWebDesign/responsive2/css/style.css
+++ b/responsiveWebDesign/responsive2/css/style.css
@@ -1,35 +1,42 @@
-body {
-  font-family: sans-serif;
-  font-size: 62.5%;
+header {
+  font-size: 1.8rem;
 }
 .nav-bar {
-  width: 100%;
   display: flex;
-  gap: 15rem;
-  background-color: rgb(194, 191, 191);
-  font-size: 2rem;
+  background-color: gray;
 }
 .logo {
   width: 20%;
-  padding-left: 3rem;
-  font-weight: 600;
 }
+.logo a {
+  color: white;
+  font-weight: 700;
+  padding-left: 1rem;
+}
+
 .nav-list {
-  width: 100%;
-  display: flex;
-  gap: 4rem;
-}
-.mobile-nav-icons {
+  width: 70%;
   display: flex;
   opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
+.nav-bar-link a {
+  color: white;
+}
+.nav-bar-link:hover a {
+  color: orangered;
+  transition: all 0.3s;
+}
+/* MOBILE */
+.btn-mobile-nav {
+  display: none;
+}
+
+/* PHOTOS */
 .slider {
   display: flex;
 }
 .content {
-  font-size: 1.6rem;
-}
-img {
-  width: 100%;
-  height: 100%;
+  font-size: 1.4rem;
 }
