--- a/website10PlusResponsive/css/style.css
+++ b/website10PlusResponsive/css/style.css
@@ -8,6 +8,9 @@
   width: 15vw;
   margin: 10px 0 20px 20px;
 }
+.logo-img {
+  width: 70%;
+}
 .menu-items {
   width: 65vw;
 }
@@ -18,39 +21,49 @@
 }
 .menu-item {
   text-transform: uppercase;
-  padding: 20px;
+  padding: 1.25rem;
   border-right: 1px solid #d7263d;
+
   &:last-child {
     border: 0;
   }
 }
 
 .fa-solid {
-  font-size: 20px;
+  font-size: 2rem;
 }
 .menu-item span a {
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 500;
-  line-height: 2;
+  font-weight: 550;
+  color: #102d50;
 }
+/* ------SUBMENU------------- */
 .submenu {
   display: none;
 }
 .menu-item:hover .submenu {
   display: block;
   position: absolute;
-  z-index: 10;
   background-color: #133156;
+  width: 20rem;
+  margin-left: -1rem;
+  margin-top: 1rem;
 }
-.submenu-item a {
+
+.submenu .submenu-item-box a {
+  display: block;
+  text-align: left;
   color: white;
+  font-size: 1.2rem;
+  padding: 2rem 2rem 2rem 1rem;
 }
-.submenu-item:hover a {
-  border: 4px solid #b11f28;
-}
-.submenu-item a:hover {
+
+.submenu-item-box:hover a {
+  display: block;
   background-color: #b11f28;
 }
+
 /* ------------------LOGIN BOX BELOW-------------- */
 .login-box {
   width: 20vw;
@@ -74,9 +87,10 @@
   justify-content: space-evenly;
 }
 .shop-login-search-box-item {
-  font-size: 14px;
+  font-size: 0.8rem;
   width: 100%;
   text-align: center;
+  color: #102d50;
 }
 .join-renew-box-item {
   background: #b11f28;
@@ -91,7 +105,7 @@
   text-align: center;
   padding: 12px 24px;
 }
-.join-renew-box-item span a {
+.join-renew-box-item span {
   color: white;
   font-weight: bold;
   font-size: 16px;
@@ -105,7 +119,11 @@
   width: 50%;
 }
 /* -------------------LOGIN-BOX ABOVE--------------- */
-
+/*  */
+/* -----MOBILE NAV------------ */
+.btn-mobile-nav {
+  display: none;
+}
 /* -------------sticky element------- */
 
 .sticky {
@@ -126,44 +144,72 @@
 .slider {
   display: flex;
   position: relative;
-  max-width: 100%;
+  width: 100vw;
 }
 .slider-wrap {
-  width: 1600px;
-  height: 630px;
+  width: 100vw;
+
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
 }
 .slides {
   display: flex;
-  width: 1600px;
-  height: 630px;
+  width: 100vw;
 }
 .slide-img {
-  width: 50%;
+  width: 50vw;
+  height: 80vh;
 }
-img {
-  width: 100%vw;
-}
+
 .slide-texts {
-  width: 800px;
-  max-width: 100%;
-  height: 630px;
-  text-align: center;
+  width: 50vw;
+  height: 80vh;
+  text-align: left;
   background-color: #b11f28;
   color: white;
+  font-size: 2rem;
+  padding-left: 2rem;
+}
+.read-more {
+  display: inline-block;
+  width: 10rem;
+  height: 3rem;
+  font-size: 1rem;
+  font-weight: 700;
+  background-color: #133156;
+  color: white;
+  margin-top: 1.2rem;
+  text-align: center;
+  line-height: 3rem;
+}
+.read-more:hover {
+  background-color: #0c223d;
+}
+.read-more2 {
+  display: inline-block;
+  width: 10rem;
+  height: 3rem;
+  font-size: 1rem;
+  font-weight: 700;
+  background-color: #b11f28;
+  color: white;
+  margin-top: 1.2rem;
+  text-align: center;
+  line-height: 3rem;
+}
+.read-more2:hover {
+  background-color: #701118;
 }
 .buttons {
   position: absolute;
-  top: 94.5%;
+  top: 91.5%;
 }
 .prevBtn {
-  left: 0.1%;
+  left: 0.2%;
 }
-
 .nextBtn {
-  left: 96.7%;
+  left: 97.7%;
 }
 /* --SLIDER YUKARIDA */
 /* ----------content-row-1 ---below----*/
@@ -171,25 +217,148 @@ img {
   display: flex;
 }
 .content-row-1-left {
-  margin-left: auto;
-  margin-right: 0;
-  width: 50%;
-  height: 630px;
-
+  width: 49vw;
+  height: 50vh;
   background-color: #133156;
   color: white;
 }
 
 .content-row-1-right {
-  margin-left: 0;
+  width: 49vw;
+  height: 50vh;
+  color: white;
+}
+.content-box {
+  text-align: left;
+  color: white;
+  font-size: 1.6rem;
+  padding-left: 2rem;
+}
+.content-img {
+  width: 50vw;
+  height: 50vh;
+}
+/* ----------content-row-1----above ---- */
+/* *******************ADVERT************** */
+.advert-box {
+  width: 40rem;
+  height: 20rem;
+  border: 1px solid black;
+  margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  height: 630px;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+}
+.advert-box-left {
+  font-size: 3rem;
+  border-right: 2px solid black;
+}
+.advert-box-right {
+  font-size: 3rem;
+  border-left: 2px solid black;
+}
+/* ----------content-row-2 ---below----*/
+.content-row-2 {
+  display: flex;
+}
+.content-row-2-left {
+  width: 50vw;
+  height: 50vh;
+  background-color: #133156;
+  color: white;
+}
+.text {
+  font-size: 1.4rem;
+}
+.content-row-2-right {
+  width: 50vw;
+  height: 50vh;
   color: white;
   background-color: #b11f28;
 }
-.content-text {
-  text-align: justify;
+
+.content-img {
+  width: 50vw;
+  height: 50vh;
 }
-/* ----------content-row-1----above ---- */
+/* ----------content-row-2----above ---- */
+
+/*  *********************LINK-CABINET*******below*********  */
+.link-cabinet-box {
+  width: 100vw;
+  height: 48rem;
+  background-color: #133156;
+  margin-top: 2em;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.link-cabinet-top,
+.link-cabinet-bottom {
+  display: flex;
+}
+.link-box-left-wrap {
+  width: 46rem;
+  height: 17rem;
+  position: relative;
+  margin: 2rem 1rem 0rem 2rem;
+}
+.link-box-right-wrap {
+  width: 46rem;
+  height: 17rem;
+  position: relative;
+  margin: 2rem 1rem 0rem 1rem;
+}
+.link-box-left {
+  width: 46rem;
+  height: 17rem;
+  border: 2px solid white;
+  color: white;
+  padding: 4rem 2rem 2rem 4rem;
+  font-size: 4rem;
+  transition: 0.3s;
+}
+.link-box-left:hover {
+  background-color: #b11f28;
+  margin-left: 0.5rem;
+  position: absolute;
+  transition: 0.3s;
+}
+.link-box-right {
+  width: 46rem;
+  height: 17rem;
+  border: 2px solid white;
+  color: white;
+  padding: 4rem 2rem 2rem 4rem;
+  font-size: 4rem;
+  transition: 0.3s;
+}
+.link-box-right:hover {
+  background-color: #b11f28;
+  margin-left: 0.5rem;
+  position: absolute;
+  transition: 0.3s;
+}
+.link-cabinet-text1 {
+  font-size: 4rem;
+  font-weight: 500;
+}
+.link-cabinet-text2 {
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+.arrow-icon {
+  position: absolute;
+  top: 70%;
+  right: 2%;
+}
+/*  
+
+
+link-cabinet-bottom
+link-box-left
+link-box-right
+*/
+
+/* *********************LINK-CABINET*******above******** */
