--- a/website13PlusResponsive/css/style.css
+++ b/website13PlusResponsive/css/style.css
@@ -1,12 +1,13 @@
 .nav-bar {
+  width: 100vw;
   display: flex;
   align-items: center;
   border-bottom: 2px solid black;
 }
 
 .logo-box {
-  width: 15vw;
-  min-width: 200px;
+  width: 20vw;
+  min-width: 15vw;
   margin: 0.6vh 0 0.6vh 1.2vh;
 }
 .logo-img {
@@ -151,6 +152,7 @@
   position: relative;
   width: 100vw;
   background-size: cover;
+  margin-top: 2vh;
 }
 .slider-wrap {
   width: 100vw;
@@ -178,7 +180,6 @@
   padding-left: 2vw;
 }
 .read-more-slide {
-  /* read-more for the left hand-side of the page */
   display: block;
   width: 10vw;
   min-width: 8vw;
@@ -254,7 +255,7 @@
   color: white;
   width: 51vw;
   height: 50vh;
-  font-size: 1.2vw;
+  font-size: calc(8px + 0.7vw);
   padding-left: 2vw;
 }
 
@@ -292,7 +293,7 @@
   color: white;
   width: 51vw;
   height: 50vh;
-  font-size: 1.2vw;
+  font-size: calc(8px + 0.7vw);
   padding-left: 2vw;
 }
 
@@ -362,7 +363,7 @@
 }
 .link-cabinet-text2 {
   margin-top: 1vw;
-  font-size: 1vw;
+  font-size: calc(4px + 0.7vw);
 }
 .arrow-icon {
   font-size: 4vw;
@@ -390,18 +391,18 @@
 .columns span {
   display: block;
   color: white;
-  font-size: 1.2vw;
+  font-size: calc(4px + 0.7vw);
   text-transform: uppercase;
   margin-top: 1vw;
 }
 .column-3 {
   color: white;
-  font-size: 1vw;
+  font-size: calc(4px + 0.7vw);
   margin-top: 3vw;
   line-height: 2;
 }
 .column-4 {
-  font-size: 2vw;
+  font-size: calc(6px + 0.7vw);
   margin-left: 20vw;
   margin-top: 3vw;
 }
@@ -416,5 +417,5 @@
   height: 5vw;
   padding-top: 1vw;
   text-align: center;
-  font-size: 1vw;
+  font-size: calc(4px + 0.7vw);
 }
